[package]
name = "kliquidity-sdk"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"
description = "Rust SDK for Kamino liquidity program"
documentation = ""
homepage = ""
repository = ""
readme = "./README.md"
keywords = ["solana"]

[lib]
name = "kliquidity_sdk"
path = "src/lib.rs"

[features]
serde = ["dep:serde"]
fetch = []
anchor = ["anchor-lang"]
anchor-idl-build = ["anchor-lang"]

[dependencies]
anchor-lang = { version = "0.30", optional = true }
borsh = "0.10.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0", features = ["derive"], optional = true }
solana-program = "1.18"
thiserror = "2.0.11"
